# ruview

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.mock  README.fr.md  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: build-apk.yml
aether-arena/space/: app.py
config/: pet-detection.toml  smart-sleep.toml
docs/: demarrage-rapide.fr.md  optimisation-performances.fr.md
flutter/: Dockerfile  pubspec.yaml
flutter/.dart_tool/: package_config.json  package_graph.json
flutter/assets/lang/: en.json
flutter/lib/: app.dart  main.dart
flutter/lib/core/: api_types.dart  constants.dart  models.dart  theme.dart
flutter/lib/l10n/: app_localizations.dart
flutter/lib/screens/: calibration_screen.dart  dashboard_screen.dart  room_detail_screen.dart  settings_screen.dart
flutter/lib/services/: ai_service.dart  api_service.dart  insight_engine.dart  notification_service.dart  rust_bridge.dart  supabase_service.dart
flutter/lib/widgets/: breathing_indicator.dart  csi_chart.dart  insight_card.dart  pose_3d_math.dart  pose_renderer.dart  room_card.dart  room_scene.dart  sensor_grid.dart  signal_particles.dart  vitals_card.dart
flutter/rust/: Cargo.toml
flutter/rust/src/: api.rs
flutter/test/: models_test.dart  widgets_test.dart
flutter/web/: index.html  manifest.json
lang/: en.json  fr.json
python/ruview/: __init__.py  i18n.py
scripts/: download-crates.py  mock-server.py  setup-fr.sh
v2/: Cargo.toml.bak
v2/crates/cog-ha-matter/src/: witness.rs  witness_signing.rs
v2/crates/homecore-plugins/src/: manifest.rs
v2/crates/homecore/src/: bus.rs  entity.rs  service.rs  state.rs
v2/crates/wifi-densepose-hardware/: Cargo.toml
v2/crates/wifi-densepose-mat/: Cargo.toml
v2/crates/wifi-densepose-nn/: Cargo.toml
v2/crates/wifi-densepose-ruvector/: Cargo.toml
v2/crates/wifi-densepose-sensing-server/: Cargo.toml
v2/crates/wifi-densepose-signal/: Cargo.toml
v2/crates/wifi-densepose-train/: Cargo.toml
v2/crates/wifi-densepose-vitals/: Cargo.toml
v2/crates/wifi-densepose-wifiscan/: Cargo.toml
