[package]
name = "wifi-densepose-vitals"
version = "0.3.1"
edition.workspace = true
description = "ESP32 CSI-grade vital sign extraction (ADR-021): heart rate and respiratory rate from WiFi Channel State Information"
license.workspace = true
authors = ["rUv <ruv@ruv.net>", "WiFi-DensePose Contributors"]
repository.workspace = true
documentation = "https://docs.rs/wifi-densepose-vitals"
keywords = ["wifi", "vital-signs", "breathing", "heart-rate", "csi"]
categories = ["science", "computer-vision"]
readme = "README.md"

[dependencies]
tracing.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vitals_bench"
harness = false

[features]
default = ["serde"]
serde = ["dep:serde"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
doc_markdown = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
many_single_char_names = "allow"
uninlined_format_args = "allow"
assigning_clones = "allow"
